@@ -10,6 +10,7 @@
 * eWay Gateway: Return proper value for authorization [duff]
 * eWay Gateway: Add support for refunds [duff]
 * Quickpay: Add support for protocols 5 & 6 [twarberg]
+* Banwire gateway: Handle JSON::ParserError [duff]
 
 == Version 1.29.3 (December 7, 2012)
 
